# bexl-py

./: .gitignore  .travis.yml  Makefile  Pipfile  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py
src/bexl/: __init__.py  cli.py  core.py  dispatcher.py  enumeration.py  errors.py  interpreter.py  lexer.py  nodes.py  parser.py  resolver.py  token.py  types.py
src/bexl/functions/: __init__.py  comparison.py  dates.py  lists.py  logical.py  numeric.py  sequences.py  strings.py  types.py
src/bexl/operators/: __init__.py  binary.py  unary.py
test/: standard_test_suite.yaml  test_bad_input.py  test_resolver.py  test_standard_suite.py
