[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
exclude = [
    'test/.*',
    'build/.*',
    'dist/.*',
]
pydocstyle = {use = false}
vulture = {use = false}

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
    'duplicate-code',
]
[tool.tidypy.pylint.options]
min-public-methods = 0
max-args = 7
max-returns = 7

[tool.tidypy.pyflakes]
disabled = [
    'UnusedImport',
]

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
]

[tool.tidypy.2to3]
disabled = [
    'future',
    'unicode',
]

